--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "axios": "^1.6.8",
     "babel-loader": "^9.1.3",
     "firebase": "^10.11.1",
     "html-webpack-plugin": "^5.6.0",
